--- a/loan/ensemble_models.ipynb
+++ b/loan/ensemble_models.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "RandomForestClassifier(max_depth=3, n_estimators=5)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.835920177383592"
+       "0.7782705099778271"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7610619469026548"
+       "0.7168141592920354"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,118 +203,115 @@
      "output_type": "stream",
      "text": [
       "Tree :  1\n",
-      "|--- Gender_Male <= 0.50\n",
-      "|   |--- Education_Not Graduate <= 0.50\n",
-      "|   |   |--- LoanAmountLog <= 4.57\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- LoanAmountLog >  4.57\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |--- Education_Not Graduate >  0.50\n",
-      "|   |   |--- PropertyArea_Semiurban <= 0.50\n",
-      "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- PropertyArea_Semiurban >  0.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|--- Gender_Male >  0.50\n",
+      "|--- IncomeLog <= 7.93\n",
       "|   |--- CreditHistory <= 0.50\n",
-      "|   |   |--- PropertyArea_Semiurban <= 0.50\n",
-      "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- PropertyArea_Semiurban >  0.50\n",
-      "|   |   |   |--- class: 0.0\n",
+      "|   |   |--- class: 0.0\n",
       "|   |--- CreditHistory >  0.50\n",
-      "|   |   |--- Dependents <= 0.50\n",
+      "|   |   |--- IncomeLog <= 7.89\n",
+      "|   |   |   |--- class: 0.0\n",
+      "|   |   |--- IncomeLog >  7.89\n",
       "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- Dependents >  0.50\n",
+      "|--- IncomeLog >  7.93\n",
+      "|   |--- Dependents <= 1.50\n",
+      "|   |   |--- IncomeLog <= 8.70\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|   |   |--- IncomeLog >  8.70\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|   |--- Dependents >  1.50\n",
+      "|   |   |--- IncomeLog <= 8.58\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|   |   |--- IncomeLog >  8.58\n",
       "|   |   |   |--- class: 1.0\n",
       "\n",
       "Tree :  2\n",
-      "|--- CreditHistory <= 0.50\n",
-      "|   |--- IncomeLog <= 10.15\n",
-      "|   |   |--- IncomeLog <= 9.20\n",
+      "|--- LoanAmountLog <= 4.89\n",
+      "|   |--- CreditHistory <= 0.50\n",
+      "|   |   |--- PropertyArea_Rural <= 0.50\n",
       "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- IncomeLog >  9.20\n",
+      "|   |   |--- PropertyArea_Rural >  0.50\n",
       "|   |   |   |--- class: 0.0\n",
-      "|   |--- IncomeLog >  10.15\n",
-      "|   |   |--- IncomeLog <= 10.95\n",
+      "|   |--- CreditHistory >  0.50\n",
+      "|   |   |--- SelfEmployed_No <= 0.50\n",
       "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- IncomeLog >  10.95\n",
-      "|   |   |   |--- class: 0.0\n",
-      "|--- CreditHistory >  0.50\n",
-      "|   |--- IncomeLog <= 9.84\n",
-      "|   |   |--- LoanAmountTerm <= 48.00\n",
-      "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- LoanAmountTerm >  48.00\n",
+      "|   |   |--- SelfEmployed_No >  0.50\n",
       "|   |   |   |--- class: 1.0\n",
-      "|   |--- IncomeLog >  9.84\n",
-      "|   |   |--- Dependents <= 2.00\n",
+      "|--- LoanAmountLog >  4.89\n",
+      "|   |--- Education_Not Graduate <= 0.50\n",
+      "|   |   |--- Gender_Male <= 0.50\n",
       "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- Dependents >  2.00\n",
+      "|   |   |--- Gender_Male >  0.50\n",
       "|   |   |   |--- class: 1.0\n",
+      "|   |--- Education_Not Graduate >  0.50\n",
+      "|   |   |--- CreditHistory <= 0.50\n",
+      "|   |   |   |--- class: 0.0\n",
+      "|   |   |--- CreditHistory >  0.50\n",
+      "|   |   |   |--- class: 0.0\n",
       "\n",
       "Tree :  3\n",
-      "|--- CreditHistory <= 0.50\n",
-      "|   |--- LoanAmountLog <= 6.30\n",
-      "|   |   |--- PropertyArea_Urban <= 0.50\n",
+      "|--- Married_Yes <= 0.50\n",
+      "|   |--- LoanAmountLog <= 5.72\n",
+      "|   |   |--- IncomeLog <= 8.16\n",
       "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- PropertyArea_Urban >  0.50\n",
-      "|   |   |   |--- class: 0.0\n",
-      "|   |--- LoanAmountLog >  6.30\n",
-      "|   |   |--- class: 1.0\n",
-      "|--- CreditHistory >  0.50\n",
-      "|   |--- Married_Yes <= 0.50\n",
-      "|   |   |--- PropertyArea_Semiurban <= 0.50\n",
+      "|   |   |--- IncomeLog >  8.16\n",
       "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- PropertyArea_Semiurban >  0.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |--- Married_Yes >  0.50\n",
+      "|   |--- LoanAmountLog >  5.72\n",
+      "|   |   |--- class: 0.0\n",
+      "|--- Married_Yes >  0.50\n",
+      "|   |--- PropertyArea_Urban <= 0.50\n",
       "|   |   |--- PropertyArea_Rural <= 0.50\n",
       "|   |   |   |--- class: 1.0\n",
       "|   |   |--- PropertyArea_Rural >  0.50\n",
       "|   |   |   |--- class: 1.0\n",
+      "|   |--- PropertyArea_Urban >  0.50\n",
+      "|   |   |--- LoanAmountLog <= 4.93\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|   |   |--- LoanAmountLog >  4.93\n",
+      "|   |   |   |--- class: 0.0\n",
       "\n",
       "Tree :  4\n",
-      "|--- Dependents <= 2.50\n",
-      "|   |--- IncomeLog <= 10.07\n",
-      "|   |   |--- Gender_Male <= 0.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- Gender_Male >  0.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |--- IncomeLog >  10.07\n",
-      "|   |   |--- SelfEmployed_No <= 0.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- SelfEmployed_No >  0.50\n",
+      "|--- Education_Not Graduate <= 0.50\n",
+      "|   |--- SelfEmployed_Yes <= 0.50\n",
+      "|   |   |--- IncomeLog <= 7.78\n",
       "|   |   |   |--- class: 0.0\n",
-      "|--- Dependents >  2.50\n",
-      "|   |--- LoanAmountLog <= 4.83\n",
-      "|   |   |--- Education_Not Graduate <= 0.50\n",
+      "|   |   |--- IncomeLog >  7.78\n",
       "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- Education_Not Graduate >  0.50\n",
+      "|   |--- SelfEmployed_Yes >  0.50\n",
+      "|   |   |--- LoanAmountTerm <= 240.00\n",
       "|   |   |   |--- class: 1.0\n",
-      "|   |--- LoanAmountLog >  4.83\n",
-      "|   |   |--- LoanAmountLog <= 5.21\n",
+      "|   |   |--- LoanAmountTerm >  240.00\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|--- Education_Not Graduate >  0.50\n",
+      "|   |--- Married_No <= 0.50\n",
+      "|   |   |--- LoanAmountLog <= 4.48\n",
       "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- LoanAmountLog >  5.21\n",
+      "|   |   |--- LoanAmountLog >  4.48\n",
       "|   |   |   |--- class: 1.0\n",
+      "|   |--- Married_No >  0.50\n",
+      "|   |   |--- IncomeLog <= 7.91\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|   |   |--- IncomeLog >  7.91\n",
+      "|   |   |   |--- class: 0.0\n",
       "\n",
       "Tree :  5\n",
-      "|--- PropertyArea_Semiurban <= 0.50\n",
-      "|   |--- LoanAmountLog <= 4.20\n",
-      "|   |   |--- IncomeLog <= 7.79\n",
-      "|   |   |   |--- class: 0.0\n",
-      "|   |   |--- IncomeLog >  7.79\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |--- LoanAmountLog >  4.20\n",
-      "|   |   |--- Education_Not Graduate <= 0.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- Education_Not Graduate >  0.50\n",
-      "|   |   |   |--- class: 0.0\n",
-      "|--- PropertyArea_Semiurban >  0.50\n",
-      "|   |--- IncomeLog <= 10.05\n",
-      "|   |   |--- Dependents <= 2.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |   |--- Dependents >  2.50\n",
-      "|   |   |   |--- class: 1.0\n",
-      "|   |--- IncomeLog >  10.05\n",
+      "|--- Married_Yes <= 0.50\n",
+      "|   |--- LoanAmountTerm <= 78.00\n",
       "|   |   |--- class: 0.0\n",
+      "|   |--- LoanAmountTerm >  78.00\n",
+      "|   |   |--- IncomeLog <= 9.68\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|   |   |--- IncomeLog >  9.68\n",
+      "|   |   |   |--- class: 0.0\n",
+      "|--- Married_Yes >  0.50\n",
+      "|   |--- CreditHistory <= 0.50\n",
+      "|   |   |--- Education_Graduate <= 0.50\n",
+      "|   |   |   |--- class: 0.0\n",
+      "|   |   |--- Education_Graduate >  0.50\n",
+      "|   |   |   |--- class: 0.0\n",
+      "|   |--- CreditHistory >  0.50\n",
+      "|   |   |--- LoanAmountLog <= 5.54\n",
+      "|   |   |   |--- class: 1.0\n",
+      "|   |   |--- LoanAmountLog >  5.54\n",
+      "|   |   |   |--- class: 1.0\n",
       "\n"
      ]
     }
@@ -337,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,52 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GradientBoostingClassifier(n_estimators=10)"
+       "GradientBoostingClassifier(n_estimators=5)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = GradientBoostingClassifier(n_estimators=10)\n",
+    "model = GradientBoostingClassifier(n_estimators=5)\n",
     "model.fit(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8381374722838137"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.score(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -402,10 +370,39 @@
     {
      "data": {
       "text/plain": [
-       "0.7787610619469026"
+       "0.8270509977827051"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7787610619469026"
+      ]
+     },
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +443,7 @@
        " 20: 0.23008849557522126}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +473,7 @@
        "Text(0, 0.5, 'Error')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -506,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +581,7 @@
        "                   final_estimator=LogisticRegression())"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +601,7 @@
        "0.8297872340425532"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
