--- a/loan/votingclassifier.ipynb
+++ b/loan/votingclassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y,random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.5, 2.8, 4.6, 1.5],\n",
+       "       [6.7, 2.5, 5.8, 1.8],\n",
+       "       [6.8, 3. , 5.5, 2.1],\n",
+       "       [5.1, 3.5, 1.4, 0.3],\n",
+       "       [6. , 2.2, 5. , 1.5],\n",
+       "       [6.3, 2.9, 5.6, 1.8],\n",
+       "       [6.6, 2.9, 4.6, 1.3],\n",
+       "       [7.7, 2.6, 6.9, 2.3],\n",
+       "       [5.7, 3.8, 1.7, 0.3],\n",
+       "       [5. , 3.6, 1.4, 0.2]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(X_train)"
    ]
   },
   {
@@ -68,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +171,53 @@
     "    clf.fit(X_train_scaled,y_train)\n",
     "    score = clf.score(X_test_scaled,y_test)\n",
     "    print(f'{name} -> {score:0.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VotingClassfier using soft voting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eclf = VotingClassifier(estimators=[('lr', lr),('knn',knn)],\n",
+    "        voting='soft')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eclf.fit(X_train_scaled,y_train)\n",
+    "score = eclf.score(X_test_scaled,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score"
    ]
   },
   {
