--- a/car/gridsearch_rf.ipynb
+++ b/car/gridsearch_rf.ipynb
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(201, 37)"
+       "(201, 38)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,28 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = RandomForestRegressor()\n",
-    "params_grid  = [{'n_estimators' : [10,20,30] , 'max_features': [10,12,15,20,24]}]"
+    "params_grid  = [{'n_estimators' : [10,15,20] , 'max_features': [10,12,15,20,24,30]}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "GridSearchCV(cv=5, estimator=RandomForestRegressor(),\n",
-       "             param_grid=[{'max_features': [10, 12, 15, 20, 24],\n",
-       "                          'n_estimators': [10, 20, 30]}])"
+       "             param_grid=[{'max_features': [10, 12, 15, 20, 24, 30],\n",
+       "                          'n_estimators': [10, 15, 20]}])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,28 +131,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8305468441469834 {'max_features': 10, 'n_estimators': 10}\n",
-      "0.8466413849022729 {'max_features': 10, 'n_estimators': 20}\n",
-      "0.844281118545732 {'max_features': 10, 'n_estimators': 30}\n",
-      "0.8022315988129742 {'max_features': 12, 'n_estimators': 10}\n",
-      "0.8226941250803377 {'max_features': 12, 'n_estimators': 20}\n",
-      "0.8207005628250622 {'max_features': 12, 'n_estimators': 30}\n",
-      "0.8330844792074267 {'max_features': 15, 'n_estimators': 10}\n",
-      "0.8518265583739089 {'max_features': 15, 'n_estimators': 20}\n",
-      "0.8358168550559171 {'max_features': 15, 'n_estimators': 30}\n",
-      "0.8154240306876069 {'max_features': 20, 'n_estimators': 10}\n",
-      "0.8463707688442238 {'max_features': 20, 'n_estimators': 20}\n",
-      "0.8439338226867397 {'max_features': 20, 'n_estimators': 30}\n",
-      "0.8219855803724819 {'max_features': 24, 'n_estimators': 10}\n",
-      "0.8547352703534905 {'max_features': 24, 'n_estimators': 20}\n",
-      "0.8367714175363664 {'max_features': 24, 'n_estimators': 30}\n"
+      "0.8317369110616044 {'max_features': 10, 'n_estimators': 10}\n",
+      "0.8343479567315912 {'max_features': 10, 'n_estimators': 15}\n",
+      "0.825573502251767 {'max_features': 10, 'n_estimators': 20}\n",
+      "0.8002892423120779 {'max_features': 12, 'n_estimators': 10}\n",
+      "0.8482196211539701 {'max_features': 12, 'n_estimators': 15}\n",
+      "0.7996298567463092 {'max_features': 12, 'n_estimators': 20}\n",
+      "0.8340619659053203 {'max_features': 15, 'n_estimators': 10}\n",
+      "0.8482382305532097 {'max_features': 15, 'n_estimators': 15}\n",
+      "0.8288045989056269 {'max_features': 15, 'n_estimators': 20}\n",
+      "0.8536633454632243 {'max_features': 20, 'n_estimators': 10}\n",
+      "0.8420724788322118 {'max_features': 20, 'n_estimators': 15}\n",
+      "0.8460291682531451 {'max_features': 20, 'n_estimators': 20}\n",
+      "0.8066428457944241 {'max_features': 24, 'n_estimators': 10}\n",
+      "0.8652341650587712 {'max_features': 24, 'n_estimators': 15}\n",
+      "0.8577752122543476 {'max_features': 24, 'n_estimators': 20}\n",
+      "0.8396239311503463 {'max_features': 30, 'n_estimators': 10}\n",
+      "0.8451251399253872 {'max_features': 30, 'n_estimators': 15}\n",
+      "0.8633216080226426 {'max_features': 30, 'n_estimators': 20}\n"
      ]
     }
    ],
@@ -165,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_features': 24, 'n_estimators': 20}"
+       "{'max_features': 24, 'n_estimators': 15}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8547352703534905"
+       "0.8652341650587712"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(max_features=24, n_estimators=20)"
+       "RandomForestRegressor(max_features=24, n_estimators=15)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9509983028200071"
+       "0.9386855497606209"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
