--- a/car/regularization_demo.ipynb
+++ b/car/regularization_demo.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22a4eec1df0>"
+       "<matplotlib.legend.Legend at 0x183001aaee0>"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 603,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "array([0.02492521])"
       ]
      },
-     "execution_count": 604,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,15 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE      :  18.540402526677713\n",
-      "RMSE     :  4.305856770339408\n",
+      "MSE      :  18.540402526677706\n",
+      "RMSE     :  4.305856770339407\n",
       "R2 Score :  0.9536489936833057\n"
      ]
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "Ridge(alpha=1.5, normalize=True)"
       ]
      },
-     "execution_count": 629,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "array([0.00997008])"
       ]
      },
-     "execution_count": 630,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -358,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22a4f13dac0>]"
+       "[<matplotlib.lines.Line2D at 0x183006bcee0>]"
       ]
      },
-     "execution_count": 633,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,16 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22a502fa730>]"
+       "[<matplotlib.lines.Line2D at 0x18300728610>]"
       ]
      },
-     "execution_count": 635,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "LassoCV(alphas=[2, 3, 4], cv=3, normalize=True)"
       ]
      },
-     "execution_count": 649,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "array([0.01867319])"
       ]
      },
-     "execution_count": 650,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "2"
       ]
      },
-     "execution_count": 658,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -563,16 +563,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 654,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22a50408e20>]"
+       "[<matplotlib.lines.Line2D at 0x183007c1850>]"
       ]
      },
-     "execution_count": 654,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,16 +605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22a5046b460>]"
+       "[<matplotlib.lines.Line2D at 0x18300816910>]"
       ]
      },
-     "execution_count": 656,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
